// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
.scroller {
  display: flex;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
}"
`;

exports[`getComponentCss() should return correct css for size: "small" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
.scroller {
  display: flex;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: 1rem;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"} 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
.scroller {
  display: flex;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: 1rem;
}
@media(min-width:480px) {
  .scroller {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}

@media(min-width:760px) {
  .scroller {
    font-size: 1rem;
  }
}

@media(min-width:1000px) {
  .scroller {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}

@media(min-width:1300px) {
  .scroller {
    font-size: 1rem;
  }
}

@media(min-width:1760px) {
  .scroller {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}
"
`;
